# BlockJumpAI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ai.h  game.h  player.h  wall.h
src/: ai.cpp  game.cpp  main.cpp  player.cpp  wall.cpp
